# dynamic-rest

./: .behaverc  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  Makefile  Procfile  README.md  README.rst  benchmarks.html  circle.yml  constants.py  dj.yml  generate_requirements.py  install_requires.txt  install_requires_python3.txt  manage.py  pylintrc  pyproject.toml  pytest.ini  requirements.benchmark.txt  requirements.test.txt  requirements.txt  run_benchmarks.py  runtests.py  setup.py  tox.ini
.build/: pip-selfcheck.json
.circleci/: config.yml  python-versions.txt
benchmarks/: .test_bench.py.swp  __init__.py  drest.py  drf.py  models.py  settings.py  test_bench.py  urls.py
benchmarks_app/: __init__.py  apps.py  drest.py  drf.py  models.py  tests.py  views.py
docs/: Makefile  conf.py  conf.py-E  dynamic_rest.html  genindex.html  index.html  index.rst  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html  tutorial.rst
dynamic_rest/: __init__.py  apps.py  base.py  bases.py  bound.py  client.py  compat.py  conf.py  constants.py  content_type_field.py  datastructures.py  fields.py  filters.py  hyperlink.py  links.py  meta.py  metadata.py  pagination.py  paginator.py  patches.py  permissions.py  prefetch.py  processors.py  query.py  related.py  renderers.py  routers.py  serializer_helpers.py  serializers.py  signals.py  tagged.py  test.py  urls.py  utils.py  value.py  views.py  viewsets.py  wrappers.py
tests/: .serializers.py.swp  __init__.py  fixture.json  groups.csv  models.py  serializers.py  (+20 more)
(+156 files in other folders)
